tests/ui/comparison/src/transmuting_null.normal.stderr
error: transmuting a known null pointer into a reference
  --> tests/ui/comparison/src/transmuting_null.rs:6:23
   |
LL |         let x: &u64 = std::mem::transmute(0 as *const u64);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `0 as *const u64` is known to be a null pointer, so transmuting it into a reference is undefined behavior
   = note: `#[deny(rpl::transmuting_null)]` on by default

error: transmuting a known null pointer into a reference
  --> tests/ui/comparison/src/transmuting_null.rs:10:23
   |
LL |         let x: &u64 = std::mem::transmute(std::ptr::null::<u64>());
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `std::ptr::null::<u64>()` is known to be a null pointer, so transmuting it into a reference is undefined behavior

error: transmuting a known null pointer into a reference
  --> tests/ui/comparison/src/transmuting_null.rs:39:23
   |
LL |         let x: &u64 = std::mem::transmute(null_ptr);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `null_ptr` is known to be a null pointer, so transmuting it into a reference is undefined behavior

error: transmuting a known null pointer into a reference
  --> tests/ui/comparison/src/transmuting_null.rs:46:23
   |
LL |         let x: &u64 = std::mem::transmute(null_ptr);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `std::ptr::null::<u64>()` is known to be a null pointer, so transmuting it into a reference is undefined behavior

error: aborting due to 4 previous errors

